# swarm_drones

./: .gitignore  README.md
client/: Dockerfile  install.sh  run.sh
client/ros_ws/: setup.sh
client/ros_ws/src/drone_msgs/: CMakeLists.txt  package.xml
client/ros_ws/src/drone_msgs/msg/: DroneRequest.msg  DroneResponse.msg
client/ros_ws/src/drone_swarm/: CMakeLists.txt  package.xml
client/ros_ws/src/drone_swarm/include/gateway/: swarm_client_http.h  swarm_client_interface.h
client/ros_ws/src/drone_swarm/src/: dummy_publisher.cpp
client/ros_ws/src/drone_swarm/src/gateway/: gateway_client.cpp  swarm_client_http.cpp
server/: data_defs.py  drone_cache.py  read_write_lock.py  requirements.txt  server.py  v_buffer.py
