<package format="3">
  <name>drone_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for drone swarm</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_typesupport_fastrtps_cpp</build_depend>
  <exec_depend>rosidl_typesupport_fastrtps_cpp</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

