<package format="3">
  <name>drone_swarm</name>
  <version>0.0.1</version>
  <description>Drone swarm control and communication</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drone_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

